[package]
name = "record-parity-fixtures"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "record-parity"
path = "src/main.rs"

[dependencies]
finance-query = { path = "../..", features = ["indicators", "risk", "fred", "crypto", "rss", "backtesting", "dataframe"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
